CDPD-41694: Backport HIVE-23100 & HIVE-23941 to CDP-PvC
It includes below changes
1. HIVE-23100: Create RexNode factory and use it in CalcitePlanner (Jesus Camacho Rodriguez, reviewed by Stephen Carlin, Vineet Garg, Zoltan Haindrich)
2. HIVE-22746: Make TypeCheckProcFactory generic (It was already merged, just merged the missing code as per HIVE-23100)
3. HIVE-23089: Add constraint checks to CBO plan (It was already merged, just merged the missing code as per HIVE-23100)
4. HIVE-23892: Remove interpretation for character RexLiteral (It was already merged, just merged the missing code as per HIVE-23100)
5. HIVE-23941: Refactor TypeCheckProcFactory to be database agnostic

Close apache/hive#970

(cherry picked from commit 91a92e323a29a49b5ad3b860b9523f347b6b8d4c)
Change-Id: Ia0f4991cfc6886bcd9bb366c9005231912ce6b59